# OpenEnv

./: .env.example  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_grader.py
envs/: ticket_triage_env.py
graders/: grader.py
models/: schemas.py
server/: app.py
tasks/: easy.json  hard.json  medium.json
