[project]
name = "customer-support-ticket-triage-openenv"
version = "1.0.0"
description = "A real-world OpenEnv environment for customer support ticket triage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"